// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip match snapshot (color error) 1`] = `
<div>
  <div
    class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorError MuiChip-filledError css-1gbpvzg-MuiChip-root"
    data-testid="chip"
    style="opacity: 1;"
  >
    <span
      class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
    >
      Hello world
    </span>
  </div>
</div>
`;

exports[`Chip match snapshot (color success) 1`] = `
<div>
  <div
    class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorSuccess MuiChip-filledSuccess css-18b01d5-MuiChip-root"
    data-testid="chip"
    style="opacity: 1;"
  >
    <span
      class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
    >
      Hello world
    </span>
  </div>
</div>
`;

exports[`Chip match snapshot (color warning) 1`] = `
<div>
  <div
    class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorWarning MuiChip-filledWarning css-i9s1jt-MuiChip-root"
    data-testid="chip"
    style="opacity: 1;"
  >
    <span
      class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
    >
      Hello world
    </span>
  </div>
</div>
`;

exports[`Chip match snapshot 1`] = `
<div>
  <div
    class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-vgi086-MuiChip-root"
    data-testid="chip"
    style="opacity: 1;"
  >
    <span
      class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
    >
      Hello world
    </span>
  </div>
</div>
`;
